--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "requests>=2.31.0",
     "pyautogui>=0.9.54",
     "pygetwindow>=0.0.9",
+    "pyperclip>=1.8.0",
 ]
 
 [build-system]
